--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "git-build": "ng build --output-path docs --base-href /Angular_17plus_test/"
   },
   "private": true,
   "dependencies": {
