--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "git-build": "ng build --output-path docs --base-href /Angular_17plus_test/"
+    "gh-build": "ng run TestV17:build-ghpages"
   },
   "private": true,
   "dependencies": {
