--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,12 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
+indent_style = tab
+tab_width = 4
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+quote_type = single
 
 [*.ts]
 quote_type = single
