--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gh-build": "ng run TestV17:build-ghpages"
+    "gh-build": "ng run TestV17:build-ghpages",
+    "format": "npx prettier --write"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.2"
   }
